# TheFramework

./: Cargo.toml  Readme.md
Xcode/TheFramework macOS/Base.lproj/: Main.storyboard
Xcode/TheFramework.xcodeproj/: project.pbxproj
Xcode/TheFramework.xcodeproj/project.xcworkspace/xcuserdata/markusmoenig.xcuserdatad/: UserInterfaceState.xcuserstate
Xcode/TheFramework.xcodeproj/xcuserdata/markusmoenig.xcuserdatad/xcschemes/: xcschememanagement.plist
examples/circle/: Cargo.toml
examples/circle/src/: circle.rs  lib.rs  main.rs
examples/codeeditor/: Cargo.toml
examples/codeeditor/src/: _lib.rs  browser.rs  editor.rs  main.rs  project.rs  sidebar.rs
examples/gpu/: Cargo.toml
examples/gpu/src/: compute.rs  compute.wgsl  demo.rs  main.rs
examples/rendererdemo/: Cargo.toml  Readme.md
examples/rendererdemo/src/: circle.rs  lib.rs
examples/uidemo/: Cargo.toml
examples/uidemo/src/: analytical.rs  browser.rs  demo.rs  main.rs  project.rs  renderer.rs  sidebar.rs
src/: lib.rs  theapp.rs  thecolor.rs  thecontext.rs  thedim.rs  thedraw2d.rs  thelogger.rs  thenodecanvas.rs  thepalette.rs  thergbabuffer.rs  thetime.rs  thetrait.rs  thewinitapp.rs
src/thecode/: loxido_compiler.rs  mod.rs  theatom.rs  thecodeatom.rs  thecodebundle.rs  thecodecontext.rs  thecodeeditor.rs  thecodefunction.rs  thecodegrid.rs  thecodelevel.rs  thecodemodule.rs  thecodenode.rs  thecodeobject.rs  thecodepackage.rs  thecodesandbox.rs  thecompiler.rs  theexecution.rs
src/thegpu/: mod.rs  thecomputepass.rs  thegpucanvas.rs  thegpucontext.rs  thepixelscontext.rs  therenderpass.rs  thetexturerenderpass.rs  thewgpucontext.rs
src/thegpu/shaders/: fragment.wgsl  vertex.wgsl
src/thescript/: mod.rs  node.rs  object.rs  render.rs  thechunk.rs  thecompiler.rs  thescanner.rs  thevm.rs  value.rs
src/theui/: mod.rs  thecanvas.rs  thecodehighlighter.rs  thecollection.rs  thecontextmenu.rs  thecurrency.rs  thedim.rs  thedrop.rs  theflattenedmap.rs  theid.rs  thenodeui.rs  thergbabuffer.rs  thergbbuffer.rs  thesdf.rs  thesizelimiter.rs  thetilemask.rs  thetime.rs  thetimeline.rs  theuicontext.rs  theuiglobals.rs  theundo.rs  thevalue.rs  thevent.rs
src/theui/thelayout/: hlayout.rs  mod.rs  thecodelayout.rs  thehlayout.rs  thelistlayout.rs  thergbalayout.rs  therowlistlayout.rs  thesharedhlayout.rs  thesharedlayout.rs  thesharedvlayout.rs  thesnapperlayout.rs  thestacklayout.rs  thetablayout.rs  thetextlayout.rs  thetreelayout.rs  thevlayout.rs  vlayout.rs
src/theui/thesdf/: mod.rs  thepattern.rs  thesdfcanvas.rs
src/theui/thestyle/: classic.rs  mod.rs
src/theui/thetheme/: dark.rs  mod.rs
src/theui/thewidget/: colorbutton.rs  dropdown.rs  menubar.rs  mod.rs  sectionbarbutton.rs  sectionbarheader.rs  sectionheader.rs  switchbar.rs  thecheckbutton.rs  thecodehighlighter.rs  thecodeview.rs  thecolorbutton.rs  thecolorpicker.rs  thedirectionpicker.rs  thedropdownmenu.rs  thegroupbutton.rs  thehdivider.rs  thehorizontalscrollbar.rs  theiconview.rs  thelistitem.rs  themarkdownview.rs  themenu.rs  themenubar.rs  themenubarbutton.rs  themenubarseparator.rs  thenodecanvas.rs  thenodecanvasview.rs  thepalettepicker.rs  therenderview.rs  thergbaview.rs  therowlistitem.rs  thesdfview.rs  thesectionbar.rs  thesectionbarbutton.rs  thesectionbarheader.rs  theslider.rs  thesnapperbar.rs  thespacer.rs  thestatusbar.rs  theswitchbar.rs  (+18 more)
