[package]
name = "theframework"
version = "0.1.20"
edition = "2021"
description = "A cross platform application UI framework."
license = "MIT"
keywords = ["application", "framework", "graphics", "user-interface", "gui"]
repository = "https://github.com/markusmoenig/theframework.git"
exclude = ["Xcode"]

[dependencies]
env_logger = "0.11"
log = "0.4"
fontdue = "0.8.0"
maths-rs = { version = "0.2.6", features = [
    "short_types",
    "short_hand_constructors",
    "casts",
    "serde",
    "hash",
] }
winit = { version = "0.29", optional = true }
winit_input_helper = { version = "0.16", optional = true }
#therenderer = { version = "0.1.1", optional = true }
# therenderer = { path = "../therenderer", optional = true }
rust-embed = { version = "8", default-features = true, features = [
    "include-exclude",
] }
png = "0.17"
rustc-hash = "1.1.0"
rfd = { version = "0.13", optional = true }
futures = { version = "0.3", optional = true }
serde = { version = "1.0", features = ["derive"], optional = false }
serde_json = { version = "1.0", optional = false }
flate2 = { version = "1.0", optional = true }
rayon = { version = "1", optional = true }
vectorize = "0.2.0"
rand = "0.8.5"
indexmap = { version = "2", features = ["serde"], default-features = true }
arboard = "3.3.2"
zeno = { version = "0.3.1", optional = true }
syntect = "5.2.0"
lazy_static = "1.5.0"
unicode-segmentation = "1.11.0"
half = { version = "2.4", features = ["serde"] }
flags = "0.1.5"
wgpu = { version = "22.1", optional = true }
aict = { version = "0.2.0", optional = true }
bytemuck = { version = "1.18.0", features = ["derive"], optional = true }
itertools = { version = "0.13.0", optional = true }

[dependencies.uuid]
version = "1.1.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
    "serde",
    "js",
]

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
console_log = "1.0.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["GpuTextureFormat"] }

[features]
#renderer = ["therenderer"]
ui = ["futures", "rfd", "flate2", "rayon", "zeno"]
code = []
winit_app = ["winit", "winit_input_helper"]
gpu = ["aict", "bytemuck", "futures", "itertools", "wgpu"]

gpu_winit = ["winit_app", "gpu"]

default = ["gpu_winit"]

[workspace]
members = ["examples/*", "run-wasm"]
