[package]
name = "codeeditor"
version = "0.1.0"
edition = "2021"

[dependencies]
theframework = { path = "../..", features = ["ui", "code"] }
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"], optional = false }
serde_json = { version = "1.0", optional = false }

# [lib]
# name = "rustapi"
# crate-type = ["staticlib"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ['Window'] }
