[package]
name = "uidemo"
version = "0.1.0"
edition = "2021"

[dependencies]
theframework = { path = "../..", features = ["ui"] }
lazy_static = "1.4.0"
rust-pathtracer = "0.2.4"
# rust-pathtracer = { path = "../../../rust-pathtracer/rust-pathtracer" }
nalgebra = "0.32.1"

# theframework = { path = "../..", features = ["ui"] }
# [lib]
# name = "rustapi"
# crate-type = ["staticlib"]